[package]
name = "cacophony"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "AGPL-3.0-only"
description = "A high-performance Discord voice runtime with Opus, UDP/RTP transport, and DAVE support."
readme = "README.md"
repository = "https://github.com/khoek/cacophony"
keywords = ["discord", "voice", "opus", "rtp", "dave"]
categories = ["multimedia::audio", "network-programming", "asynchronous"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
davey = "0.1.3"
futures-util = "0.3.32"
opus-rs = "0.1.23"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
