[package]
name = "cacophony"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "AGPL-3.0-only"
description = "A high-performance Discord voice runtime with Opus, UDP/RTP transport, and DAVE support."
readme = "README.md"
repository = "https://github.com/khoek/cacophony"
keywords = ["discord", "voice", "opus", "rtp", "dave"]
categories = ["multimedia::audio", "network-programming", "asynchronous"]

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
dave = { path = "../dave", version = "0.1" }
futures-util = "0.3"
ogg = "0.9"
opus-rs = "0.1"
rubato = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
zeroize = "1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
