[package]
name = "cacophony"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
license = "AGPL-3.0-only"
description = "A high-performance Discord voice runtime with Opus, UDP/RTP transport, and DAVE support."
readme = "README.md"
repository = "https://github.com/khoek/cacophony"
keywords = ["discord", "voice", "opus", "rtp", "dave"]
categories = ["multimedia::audio", "network-programming", "asynchronous"]

[dependencies]
dave = { path = "../dave", version = "0.2" }

aes-gcm = "0.10"
chacha20poly1305 = "0.10"
futures-util = "0.3"
getrandom = "0.3"
ogg = "0.9"
opus-rs = "0.1"
rubato = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
zeroize = "1"

[dev-dependencies]
openmls = { version = "0.8", features = ["js"] }
openmls_basic_credential = "0.5"
openmls_rust_crypto = "0.5"
pretty_assertions = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
